crates/php-parser/tests/snapshots/integration__yield_complex.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "gen",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "a"
                        },
                        "span": {
                          "start": 27,
                          "end": 29
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "Yield": {
                            "key": null,
                            "value": null,
                            "is_from": false
                          }
                        },
                        "span": {
                          "start": 32,
                          "end": 37
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 27,
                    "end": 37
                  }
                }
              },
              "span": {
                "start": 27,
                "end": 43
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "b"
                        },
                        "span": {
                          "start": 43,
                          "end": 45
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "Yield": {
                            "key": null,
                            "value": {
                              "kind": {
                                "String": "value"
                              },
                              "span": {
                                "start": 54,
                                "end": 61
                              }
                            },
                            "is_from": false
                          }
                        },
                        "span": {
                          "start": 48,
                          "end": 61
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 43,
                    "end": 61
                  }
                }
              },
              "span": {
                "start": 43,
                "end": 67
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "c"
                        },
                        "span": {
                          "start": 67,
                          "end": 69
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "Yield": {
                            "key": {
                              "kind": {
                                "String": "key"
                              },
                              "span": {
                                "start": 78,
                                "end": 83
                              }
                            },
                            "value": {
                              "kind": {
                                "String": "value"
                              },
                              "span": {
                                "start": 87,
                                "end": 94
                              }
                            },
                            "is_from": false
                          }
                        },
                        "span": {
                          "start": 72,
                          "end": 94
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 67,
                    "end": 94
                  }
                }
              },
              "span": {
                "start": 67,
                "end": 100
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Yield": {
                      "key": null,
                      "value": {
                        "kind": {
                          "FunctionCall": {
                            "name": {
                              "kind": {
                                "Identifier": "otherGen"
                              },
                              "span": {
                                "start": 111,
                                "end": 119
                              }
                            },
                            "args": []
                          }
                        },
                        "span": {
                          "start": 111,
                          "end": 121
                        }
                      },
                      "is_from": true
                    }
                  },
                  "span": {
                    "start": 100,
                    "end": 121
                  }
                }
              },
              "span": {
                "start": 100,
                "end": 127
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Assign": {
                      "target": {
                        "kind": {
                          "Variable": "d"
                        },
                        "span": {
                          "start": 127,
                          "end": 129
                        }
                      },
                      "op": "Assign",
                      "value": {
                        "kind": {
                          "Binary": {
                            "left": {
                              "kind": {
                                "Parenthesized": {
                                  "kind": {
                                    "Yield": {
                                      "key": null,
                                      "value": {
                                        "kind": {
                                          "String": "x"
                                        },
                                        "span": {
                                          "start": 139,
                                          "end": 142
                                        }
                                      },
                                      "is_from": false
                                    }
                                  },
                                  "span": {
                                    "start": 133,
                                    "end": 142
                                  }
                                }
                              },
                              "span": {
                                "start": 132,
                                "end": 144
                              }
                            },
                            "op": "Add",
                            "right": {
                              "kind": {
                                "Int": 1
                              },
                              "span": {
                                "start": 146,
                                "end": 147
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 132,
                          "end": 147
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 127,
                    "end": 147
                  }
                }
              },
              "span": {
                "start": 127,
                "end": 149
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 150
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 150
  }
}
