crates/php-parser/tests/snapshots/integration__yield_from.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
function combined() {
    yield from [1, 2, 3];
    yield from otherGenerator();
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "combined",
          "params": [],
          "body": [
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Yield": {
                      "key": null,
                      "value": {
                        "kind": {
                          "Array": [
                            {
                              "key": null,
                              "value": {
                                "kind": {
                                  "Int": 1
                                },
                                "span": {
                                  "start": 44,
                                  "end": 45
                                }
                              },
                              "unpack": false,
                              "span": {
                                "start": 44,
                                "end": 45
                              }
                            },
                            {
                              "key": null,
                              "value": {
                                "kind": {
                                  "Int": 2
                                },
                                "span": {
                                  "start": 47,
                                  "end": 48
                                }
                              },
                              "unpack": false,
                              "span": {
                                "start": 47,
                                "end": 48
                              }
                            },
                            {
                              "key": null,
                              "value": {
                                "kind": {
                                  "Int": 3
                                },
                                "span": {
                                  "start": 50,
                                  "end": 51
                                }
                              },
                              "unpack": false,
                              "span": {
                                "start": 50,
                                "end": 51
                              }
                            }
                          ]
                        },
                        "span": {
                          "start": 43,
                          "end": 52
                        }
                      },
                      "is_from": true
                    }
                  },
                  "span": {
                    "start": 32,
                    "end": 52
                  }
                }
              },
              "span": {
                "start": 32,
                "end": 58
              }
            },
            {
              "kind": {
                "Expression": {
                  "kind": {
                    "Yield": {
                      "key": null,
                      "value": {
                        "kind": {
                          "FunctionCall": {
                            "name": {
                              "kind": {
                                "Identifier": "otherGenerator"
                              },
                              "span": {
                                "start": 69,
                                "end": 83
                              }
                            },
                            "args": []
                          }
                        },
                        "span": {
                          "start": 69,
                          "end": 85
                        }
                      },
                      "is_from": true
                    }
                  },
                  "span": {
                    "start": 58,
                    "end": 85
                  }
                }
              },
              "span": {
                "start": 58,
                "end": 87
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 88
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 88
  }
}
